# snake_game_rust

./: .gitignore  Cargo.toml  makefile  readme.md
src/: apple.rs  main.rs  snake.rs
