[package]
name = "snake_game"
version = "0.1.0"
authors = [
    "André Castelo <andre.castelo@fleye.com.br>"
]

[[bin]]
name = "snake-game"

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"
nanorand = "0.7.0"
rusty_audio = "1.4.0"
